--- a/css/page.css
+++ b/css/page.css
@@ -105,3 +105,11 @@ li .sub-menu a{
 li.sub-menu a:hover{
     opacity: 1;
 }
+
+#conteudo{
+    background: #f2f2f2;
+    height: 100vh;
+    left: 200px;
+    position: relative;
+    width: calc(100%-200px)
+}
